# Harmony

./: .gitignore  Harmony_PRD.md
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  square_icon.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: schemas.py  websocket.py
backend/app/api/routes/: analyze.py  batch.py  export.py  health.py
backend/app/core/: audio_loader.py  feature_extractor.py  orchestrator.py  preprocessing.py
backend/app/engines/: __init__.py
backend/app/engines/bpm/: __init__.py  ensemble.py  essentia_tracker.py  librosa_tracker.py  onset_tracker.py
backend/app/engines/extended/: __init__.py
backend/app/engines/key/: __init__.py  ensemble.py  essentia_key.py  profiles.py
backend/app/engines/separation/: __init__.py
backend/app/ml/: __init__.py  model_registry.py
backend/app/utils/: exceptions.py  music_theory.py
backend/app/workers/: __init__.py
backend/tests/: conftest.py  test_bpm_ensemble.py  test_key_ensemble.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/components/analysis/: analysis-panel.tsx
frontend/src/components/audio/: file-dropzone.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/lib/: api-client.ts  camelot.ts  constants.ts
frontend/src/stores/: analysis-store.ts  index.ts  settings-store.ts
frontend/src/types/: analysis.ts
training/: export_onnx.py  train_bpm.py
