[project]
name = "harmony-backend"
version = "0.1.0"
description = "Harmony - World's Most Accurate BPM & Key Detection Engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Harmony Team" }]

dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Task Queue & Cache
    "arq>=0.26.1",
    "redis>=5.2.0",

    # Audio Processing
    "librosa>=0.10.2",
    "soundfile>=0.12.1",
    "pydub>=0.25.1",
    "numpy>=1.26.0",
    "scipy>=1.14.0",

    # Machine Learning & Inference
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "onnxruntime>=1.19.0",
    "timm>=1.0.0",

    # GPU-Accelerated Audio
    "nnAudio>=0.3.3",

    # Music Theory
    "music21>=9.1.0",

    # Logging & Observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",

    # Utilities
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "orjson>=3.10.0",
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=6.0.0",
    "hypothesis>=6.115.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
gpu = [
    "onnxruntime-gpu>=1.19.0",
]
# Platform-specific audio analysis (not available on all platforms)
audio-extras = [
    "essentia>=2.1b6.dev1055",
    "demucs>=4.0.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
