[package]
name = "harmony"
version = "0.1.0"
edition = "2021"
description = "Harmony Desktop Application"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "harmony"
path = "src/main.rs"
